--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8-slim-buster
+FROM python:3
 
 WORKDIR /flask-market
 
@@ -6,4 +6,4 @@ COPY . .
 
 RUN pip install -r requirements.txt
 
-CMD ["python","wsgi.py"]
+CMD gunicorn --bind 0.0.0.0:5000 -w 3 wsgi:app
