--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -13,7 +13,7 @@ Flask-Login==0.6.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
-gunicorn==20.1.0
+gunicorn
 idna==3.3
 importlib-metadata==4.11.3
 isort==5.10.1
@@ -35,3 +35,4 @@ Werkzeug==2.1.1
 wrapt==1.14.0
 WTForms==3.0.1
 zipp==3.8.0
+psycopg2
