--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3'
 services:
   web:
-    image: 8285/flask_market
-    restart: always
+    build: web
+    image: flask_market
+    # restart: always
     container_name: flask_market
     ports:
       - 5000:5000
@@ -14,28 +15,28 @@ services:
   proxy:
     build: proxy
     container_name: market_proxy
-    restart: always
+    # restart: always
     ports:
       - 80:80
     networks:
       - flask_market_network
 
-  db:
-    image: postgres:13
-    container_name: market_db
-    restart: always
-    ports:
-      - 5432:5432
-    networks:
-      - flask_market_network
-    volumes:
-      - postgres_market_data:/var/lib/postgres/data
-    environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=market
+  # db:
+  #   image: postgres:13
+  #   container_name: market_db
+  #   # restart: always
+  #   ports:
+  #     - 5432:5432
+  #   networks:
+  #     - flask_market_network
+  #   volumes:
+  #     - postgres_market_data:/var/lib/postgres/data
+  #   environment:
+  #     - POSTGRES_USER=admin
+  #     - POSTGRES_PASSWORD=admin
+  #     - POSTGRES_DB=market
 networks:
   flask_market_network:
 
-volumes:
-  postgres_market_data:
+# volumes:
+#   postgres_market_data:
